08_Networking/28-03_Namespace/dev-ns.yaml
# Exercise 20-03 v1.0.0
#
---
apiVersion: v1
kind: Namespace
metadata:
  name: devstore-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: database-ns
