08_Networking/28-03_Namespace/db01-netpol.yaml
# Exercise 20-03 v1.0.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db01-netpol
  namespace: db-ns
spec:
  podSelector:
    matchLabels:
      pod: db01-pod
  policyTypes:
    - Egress
