08_Networking/28-03_Namespace/web01-netpol.yaml
# Exercise 20-03 v1.0.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web01-netpol
  namespace: web-ns
spec:
  podSelector:
    matchLabels:
      pod: web01-pod
  policyTypes:
    - Ingress
    - Egress
  ingress: 
    - from:
      - podSelector:
          matchLabels:
            pod: app01-pod
      ports:
        - protocol: TCP
          port: 80 
  egress:
    - to:
      - podSelector:
          matchLabels: 
            pod: db10-pod 
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: db-ns
      ports:
        - protocol: TCP
          port: 6379
